--- a/menu.htm
+++ b/menu.htm
@@ -9,7 +9,7 @@
   </script>
   </head>
   <body>
-<section id="index" data-role="page" style="background-image:url(img/bg.png)">
+<section id="menu" data-role="page" style="background-image:url(img/bg.png)">
       <header data-role="header" data-theme="d" ><h1>
       	<div align="center">
                 	<font face="Cambria, Hoefler Text, Liberation Serif, Times, Times New Roman, serif" color="#FFFFFF">
